--- a/pom.xml
+++ b/pom.xml
@@ -104,8 +104,8 @@
     </build>
     <scm>
         <url>https://github.com/cmanlh/forestbatis.git</url>
-        <connection>scm:git:https://github.com/cmanlh/forestbatis.git</connection>
-        <developerConnection>scm:git:https://github.com/cmanlh/forestbatis.git</developerConnection>
+        <connection>scm:git:git@github.com:cmanlh/forestbatis.git</connection>
+        <developerConnection>scm:git:git@github.com:cmanlh/forestbatis.git</developerConnection>
         <tag>HEAD</tag>
     </scm>
 
