--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,8 @@
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.lifeonwalden</groupId>
     <artifactId>forestbatis</artifactId>
-    <version>0.0.4-SNAPSHOT</version>
+    <version>0.0.4</version>
     <name>forestbatis</name>
     <description>A static orm library</description>
     <url>https://github.com/cmanlh/forestbatis</url>
@@ -88,7 +87,7 @@
         <url>https://github.com/cmanlh/forestbatis.git</url>
         <connection>scm:git:git@github.com:cmanlh/forestbatis.git</connection>
         <developerConnection>scm:git:git@github.com:cmanlh/forestbatis.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>forestbatis-0.0.4</tag>
     </scm>
 
     <distributionManagement>
