--- a/forestbatis-example/forestbatis-example-spring/pom.xml
+++ b/forestbatis-example/forestbatis-example-spring/pom.xml
@@ -19,6 +19,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.lifeonwalden</groupId>
+            <artifactId>forestbatis-core-common</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-tx</artifactId>
         </dependency>
