--- a/forestbatis-core/forestbatis-core-mapper/pom.xml
+++ b/forestbatis-core/forestbatis-core-mapper/pom.xml
@@ -3,15 +3,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>forestbatis-example</artifactId>
+        <artifactId>forestbatis-core</artifactId>
         <groupId>com.lifeonwalden</groupId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>forestbatis-example-spring</artifactId>
+    <artifactId>forestbatis-core-mapper</artifactId>
 
-    <name>forestbatis-example-spring</name>
+    <name>forestbatis-core-mapper</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -20,20 +20,8 @@
     <dependencies>
         <dependency>
             <groupId>com.lifeonwalden</groupId>
-            <artifactId>forestbatis-core-mapper</artifactId>
+            <artifactId>forestbatis-core-common</artifactId>
             <version>1.0.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-tx</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.hsqldb</groupId>
-            <artifactId>hsqldb</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
         </dependency>
     </dependencies>
 </project>
