--- a/forestbatis-core/pom.xml
+++ b/forestbatis-core/pom.xml
@@ -15,6 +15,7 @@
     <name>forestbatis-core</name>
     <modules>
         <module>forestbatis-core-common</module>
+        <module>forestbatis-core-mapper</module>
     </modules>
 
     <properties>
