--- a/forestbatis-core/forestbatis-core-orm/pom.xml
+++ b/forestbatis-core/forestbatis-core-orm/pom.xml
@@ -3,24 +3,25 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>forestbatis</artifactId>
+        <artifactId>forestbatis-core</artifactId>
         <groupId>com.lifeonwalden</groupId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>forestbatis-core</artifactId>
-    <packaging>pom</packaging>
+    <artifactId>forestbatis-core-orm</artifactId>
 
-    <name>forestbatis-core</name>
-    <modules>
-        <module>forestbatis-core-common</module>
-        <module>forestbatis-core-mapper</module>
-        <module>forestbatis-core-sql</module>
-        <module>forestbatis-core-orm</module>
-    </modules>
+    <name>forestbatis-core-orm</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.lifeonwalden</groupId>
+            <artifactId>forestbatis-core-common</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
