--- a/forestbatis-core/forestbatis-core-sql/pom.xml
+++ b/forestbatis-core/forestbatis-core-sql/pom.xml
@@ -23,5 +23,9 @@
             <artifactId>forestbatis-core-common</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
     </dependencies>
 </project>
