--- a/forestbatis-core/forestbatis-core-mapper/pom.xml
+++ b/forestbatis-core/forestbatis-core-mapper/pom.xml
@@ -23,5 +23,13 @@
             <artifactId>forestbatis-core-sql</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
     </dependencies>
 </project>
