--- a/forestbatis-example/forestbatis-example-spring/pom.xml
+++ b/forestbatis-example/forestbatis-example-spring/pom.xml
@@ -16,4 +16,11 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+        </dependency>
+    </dependencies>
 </project>
