--- a/forestbatis-core/forestbatis-core-mapper/pom.xml
+++ b/forestbatis-core/forestbatis-core-mapper/pom.xml
@@ -28,6 +28,14 @@
             <artifactId>hsqldb</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j-impl</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
         </dependency>
