--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <modules>
         <module>forestbatis-example</module>
         <module>forestbatis-core</module>
+        <module>forestbatis-spring</module>
     </modules>
     <name>forestbatis</name>
     <description>A static orm framework</description>
