--- a/forestbatis-spring/pom.xml
+++ b/forestbatis-spring/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <artifactId>forestbatis</artifactId>
         <groupId>com.lifeonwalden</groupId>
-        <version>1.0.1</version>
+        <version>1.0.2-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -20,7 +20,7 @@
         <dependency>
             <groupId>com.lifeonwalden</groupId>
             <artifactId>forestbatis-core-mapper</artifactId>
-            <version>1.0.1</version>
+            <version>1.0.2-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
