--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,8 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.repository>${user.home}/.m2/repository</maven.repository>
         <spring.version>4.3.10.RELEASE</spring.version>
+        <maven.javadoc.skip>true</maven.javadoc.skip>
+        <maven.test.skip>true</maven.test.skip>
     </properties>
 
     <dependencyManagement>
