[maven-release-plugin] prepare release forestbatis-1.0.2

--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,8 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.lifeonwalden</groupId>
     <artifactId>forestbatis</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.2</version>
     <modules>
         <module>forestbatis-example</module>
         <module>forestbatis-core</module>
@@ -163,7 +162,7 @@
     <scm>
         <developerConnection>scm:git:http://git.orientsec.com.cn/scm/~luhong/forestbatis.git</developerConnection>
         <connection>scm:git:http://git.orientsec.com.cn/scm/~luhong/forestbatis.git</connection>
-        <tag>HEAD</tag>
+        <tag>forestbatis-1.0.2</tag>
     </scm>
     <distributionManagement>
         <repository>
