--- a/forestbatis-core/forestbatis-core-common/pom.xml
+++ b/forestbatis-core/forestbatis-core-common/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <artifactId>forestbatis-core</artifactId>
         <groupId>com.lifeonwalden</groupId>
-        <version>1.0.3-SNAPSHOT</version>
+        <version>1.0.3</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>forestbatis-core-common</artifactId>
