--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.lifeonwalden</groupId>
     <artifactId>forestbatis</artifactId>
-    <version>1.0.5</version>
+    <version>1.0.6-SNAPSHOT</version>
     <modules>
         <module>forestbatis-example</module>
         <module>forestbatis-core</module>
@@ -162,7 +162,7 @@
     <scm>
         <developerConnection>scm:git:http://git.orientsec.com.cn/scm/~luhong/forestbatis.git</developerConnection>
         <connection>scm:git:http://git.orientsec.com.cn/scm/~luhong/forestbatis.git</connection>
-        <tag>forestbatis-1.0.5</tag>
+        <tag>HEAD</tag>
     </scm>
     <distributionManagement>
         <repository>
