--- a/pom.xml
+++ b/pom.xml
@@ -84,9 +84,8 @@
         </plugins>
     </build>
     <scm>
-        <url>https://github.com/cmanlh/forestbatis.git</url>
-        <connection>scm:git:git@github.com:cmanlh/forestbatis.git</connection>
-        <developerConnection>scm:git:git@github.com:cmanlh/forestbatis.git</developerConnection>
+        <developerConnection>scm:git:http://git.orientsec.com.cn/scm/~luhong/forestbatis.git</developerConnection>
+        <connection>scm:git:http://git.orientsec.com.cn/scm/~luhong/forestbatis.git</connection>
         <tag>HEAD</tag>
     </scm>
     <distributionManagement>
