--- a/forestbatis-example/pom.xml
+++ b/forestbatis-example/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <artifactId>forestbatis</artifactId>
         <groupId>com.lifeonwalden</groupId>
-        <version>1.0.10-SNAPSHOT</version>
+        <version>1.0.10</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>forestbatis-example</artifactId>
