--- a/forestbatis-example/forestbatis-example-spring/pom.xml
+++ b/forestbatis-example/forestbatis-example-spring/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <artifactId>forestbatis-example</artifactId>
         <groupId>com.lifeonwalden</groupId>
-        <version>1.0.12-SNAPSHOT</version>
+        <version>1.0.12</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
